--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
               </a>
             </li>
             <li class="list-inline-item">
-              <a href="">
+              <a href="https://www.linkedin.com/in/ivan-zaqqa-617054150/?lipi=urn%3Ali%3Apage%3Ad_flagship3_feed%3B%2Fi2wZ932QkqmV%2BbCRPkhUw%3D%3D&licu=urn%3Ali%3Acontrol%3Ad_flagship3_feed-nav.settings_view_profile">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
                   <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
