editing index.html

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa"></i>
-              <a href="projects/perpus-laravel/public/">Mobile-First, Responsive Design</a></li>
+              <a href="localhost/projects/perpus-laravel/public/">Almzq Perpustakaan</a></li>
             <li>
               <i class="fa-li fa"></i>
               Cross Browser Testing &amp; Debugging</li>
