--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
         <div class="my-auto">
           <h2 class="mb-5">Interests</h2>
-          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+          <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skiier and novice ice climber. During the warmer months here, I enjoy mountain biking, free climbing, and kayaking.</p>
           <p class="mb-0">When forced indoors, I follow a number of action and comedy genre movies and television shows, and I spend a large amount of my free time exploring the latest technolgy advancements in the backend web development world.</p>
         </div>
       </section>
@@ -182,10 +182,6 @@
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="projects">
         <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
-            <li>
-              <i class="fa-li fa"></i>
-              <a href="localhost/projects/perpus-laravel/public/">Almzq Perpustakaan</a></li>
-            <li>
               <i class="fa-li fa"></i>
               Cross Browser Testing &amp; Debugging</li>
             <li>
